# DSCI_310_Group_10_Package

./: CHANGELOG.md  CONTRIBUTING.md  README.md  Usage.ipynb  pyproject.toml
.github/workflows/: main.yml
DSCI_310_Group_10_Package/: CHANGELOG.md  CONTRIBUTING.md  Usage.ipynb
DSCI_310_Group_10_Package/docs/: conf.py  example.ipynb  make.bat
DSCI_310_Group_10_Package/tests/: test_alpha_tuning.py  test_format_histograms.py
docs/: Makefile  conf.py  make.bat
src/DSCI_310_Group_10_Package/: DSCI_310_Group_10_Package.py  __init__.py
tests/: Untitled.ipynb  test_DSCI-310-Group-10-Package.py  test_KNN_tuning.py  test_alpha_tuning.py  test_format_histograms.py  test_inv_outcome_plot.py  test_split_drop.py
